--- a/css/euro2016.css
+++ b/css/euro2016.css
@@ -76,11 +76,12 @@ body {
     display: block;
     height: 102px;
     width: 102px;
-    background-image: url(../images/download.png);
+    background-image: url(../assets/oitavos.png);
     background-size: cover;
     position: relative;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
+    border: 1px solid black;
 }
 
 /*classe que mostra a carta virada ao contrário*/
