--- a/css/euro2016.css
+++ b/css/euro2016.css
@@ -23,8 +23,7 @@ body {
 
 /* Tabuleiro de jogo (board) */
 #tabuleiro {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     grid-template-columns: repeat(4, 102px);
     grid-template-rows: repeat(4, 102px);
     gap: 10px;
@@ -71,8 +70,8 @@ body {
 
 /*-----------------------------------------------------------------------------*/
 
-/*Define uma cara*/
-.carta{
+/*Define uma carta*/
+.carta {
     display: block;
     height: 102px;
     width: 102px;
@@ -80,34 +79,51 @@ body {
     background-size: cover;
     position: relative;
     cursor: pointer;
-    transition: transform 0.3s ease-in-out;
     border: 1px solid black;
 }
 
-/*classe que mostra a carta virada ao contrário*/
+/*Classe que mostra a carta virada ao contrário*/
 .escondida {
     background-image: url(../images/download.png); /* Certifique-se que este caminho está correto */
     background-size: cover;
 }
 
-/*Classe que anima as cartas quando existe uma correspondência*/
-.matched{
-    animation: matchKF alternate 0.1s;
-    pointer-events: none;
+/* Formatação do Modal de Vitória */
+#winModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    display: none; /* Inicialmente escondido */
+    z-index: 1000;
 }
 
-@keyframes matchKF{
-    from{ transform: scale(0);}
-    to{ transform: scale(1.1);}
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
 }
 
-.hidden {
-    display: none;
-    
+#closeModal {
+    background-color: #303333;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-/*Formatação da progress bar*/
-#time{
+#closeModal:hover {
+    background-color: #1E7179;
+}
+
+/* Formatação da progress bar */
+#time {
     position: fixed;
     bottom: 0px;
     width: 100%;
@@ -115,12 +131,16 @@ body {
     border: none;
 }
 
-/* classe que anima a progress bar quando é adicionada à sua lista de classes*/
-.warning{
+/* classe que anima a progress bar quando é adicionada à sua lista de classes */
+.warning {
     animation: wa alternate 1s infinite;
 }
 
-@keyframes wa{
-    from{background-color: blue;}
-    to{background-color:red;}
+@keyframes wa {
+    from {
+        background-color: blue;
+    }
+    to {
+        background-color: red;
+    }
 }
